# BBFramework

./: .gitignore  README.md
Allocator/: Allocator.vcxproj  Allocator.vcxproj.filters  Main.cpp
Allocator/Debug/: vc143.idb
Allocator/Debug/Allocator.tlog/: Allocator.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Allocator/Framework/: Allocators.cpp  Allocators.h  Allocators_UTEST.cpp  Allocators_UTEST.h  Allocators_WIN.cpp  BB_AllocTypes.h  BackingAllocator.h  BackingAllocator_WIN.cpp  MemoryArena.cpp  MemoryArena.h  pointerUtils.h
Allocator/Framework/Storage/: Dynamic_Array.h
Allocator/UnitTests/Utils/: Math.h
Allocator/UnitTests/googletest/Debug/: gtest_main.lib
Allocator/UnitTests/googletest/Release/: gtest.lib  gtest_main.lib
Allocator/pch/: pch.h
Project/BB/: CMakeLists.txt  CMakePresets.json
Project/BB/Allocator/: CMakeLists.txt  Main.cpp
Project/BB/Allocator/Framework/: Allocators.cpp  Allocators.h  Allocators_UTEST.h  BB_AllocTypes.h  BackingAllocator.h  BackingAllocator_LINUX.cpp  BackingAllocator_WIN.cpp  Common.h  Framework.h  MemoryArena.h  OSDevice.h  OSDevice_WIN.cpp
Project/BB/Allocator/Framework/Allocators/: AllocTypes.h  Allocators.cpp  Allocators.h  Allocators_UTEST.h  BB_AllocTypes.h  BackingAllocator.h  BackingAllocator_LINUX.cpp  BackingAllocator_WIN.cpp  MemoryArena.cpp  MemoryArena.h  MemoryArena_UTEST.h
Project/BB/Allocator/Framework/Allocators/BackingAllocator/: BackingAllocator.h  BackingAllocator_LINUX.cpp  BackingAllocator_WIN.cpp
Project/BB/Allocator/Framework/OS/: OSDevice.h  OSDevice_LINUX.cpp  OSDevice_WIN.cpp
Project/BB/Allocator/Framework/Storage/: Dynamic_Array.h  Dynamic_Array_UTEST.h  Hashmap.h  Hashmap_UTEST.h  Pool.h  Pool_UTEST.h  Slotmap.h  String.h
Project/BB/Allocator/Framework/Utils/: Hash.h  Logger.h  Math.h  Slice.h  Slice_UTEST.h  Utils.h  pointerUtils.h
Project/BB/Allocator/pch/: pch.cpp  pch.h
Project/BB/Framework/: CMakeLists.txt
Project/BB/Framework/include/: Common.h
Project/BB/Framework/include/OS/: OSDevice.h
Project/BB/Framework/include/Storage/: Array.h  Pool.h  Slotmap.h
Project/BB/Framework/include/Utils/: Slice.h  Utils.h
Project/BB/Framework/src/Allocators/BackingAllocator/: BackingAllocator_WIN.cpp
Project/BB/Framework/src/OS/: OSDevice_WIN.cpp
Project/BB/UnitTests/: CMakeLists.txt  Main.cpp
Project/BB/UnitTests/Framework/: Allocators_UTEST.h  Dynamic_Array_UTEST.h  Hashmap_UTEST.h  MemoryArena_UTEST.h  Pool_UTEST.h  Slice_UTEST.h  Slotmap_UTEST.h  String_UTEST.h
